# amy

./: .dockerignore  .editorconfig  .env  .flake8  .git-blame-ignore-revs  .gitignore  .landscape.yaml  .mailmap  .pa11yci  .pre-commit-config.yaml  .travis.yml  404.html  ACKNOWLEDGMENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  Pipfile  Procfile  README.md  bower.json  db.sql  db.sqlite3  docker-compose.yml  fake.sql  generate_changelog.py  index.html  lighthouserc.js  manage.py  migrater.py  mkdocs.yml  notes-importer.py  pa11y-single-test.json  package-lock.json  package.json  puppeteer-script.js  (+4 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: accessibility.yml  black.yml  build-docs.yml  cicd.yml  cicd_develop.yml  cicd_feature_branch.yml  cicd_main.yml  cicd_main_manual.yml  cicd_prs.yml  codeql-analysis.yml  incl_accessibility.yml  incl_build_and_deploy.yml  incl_build_and_deploy_production.yml  incl_build_and_deploy_staging.yml  incl_build_container_image.yml  incl_linter.yml  incl_test.yml  linter.yml  python-test.yml  test.yml
accessibility_testing/: index.html
acknowledgements/: index.html
amy/: __init__.py  settings.py  urls.py  wsgi.py
amy/api/: filters.py  renderers.py  serializers.py  urls.py  views.py
amy/autoemails/: actions.py  admin.py  apps.py  base_views.py  bulk_email.py  forms.py  job.py  jobs.py  models.py  triggers.py  urls.py  utils.py  views.py
amy/communityroles/: admin.py  apps.py  fields.py  forms.py  models.py  views.py
amy/consents/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  receivers.py  serializer.py  signals.py  urls.py  util.py  views.py
amy/dashboard/: admin.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
amy/emails/: actions.py  apps.py  controller.py  filters.py  forms.py  models.py  schemas.py  signals.py  types.py  urls.py  utils.py  views.py
amy/extcomments/: __init__.py  apps.py  forms.py  tests.py  utils.py
amy/extforms/: apps.py  deprecated_forms.py  forms.py  urls.py  views.py
amy/extrequests/: admin.py  apps.py  base_views.py  deprecated_filters.py  deprecated_forms.py  deprecated_views.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
amy/fiscal/: admin.py  apps.py  base_views.py  filters.py  forms.py  models.py  urls.py  views.py
amy/offering/: admin.py  apps.py  base_views.py  filters.py  forms.py  models.py  urls.py  views.py
amy/pydata/: __init__.py  apps.py  checks.py  forms.py  urls.py  views.py
amy/recruitment/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
amy/reports/: forms.py  urls.py  views.py
amy/scripts/: seed_autoemails.py  seed_badges.py  seed_communityroles.py  seed_emails.py  seed_event_categories.py  seed_groups.py  seed_involvements.py  seed_training_requirements.py
amy/static/: agreement_credits_extension.js  amy_utils.js  attachment_generate_presigned_url.js  award_form.js  calendar_popup.js  checkboxes_sessionstorage.js  communityrole_form.js  date_yyyymmdd.js  edit_from_url.js  instructor_availability_checkbox.js  membership_create.js  membership_extend.js  offering_account_benefit_for_partnership_form.js  online_country.js  partnership_form.js  prism.js  task_form.js  trainingprogress_form.js
amy/templates/: base.html  base_nav_sidebar.html  generic_form.html  generic_form_with_comments.html  get_involved_form.html  navigation.html  navigation_instructor_dashboard.html  navigation_trainee.html  pagination.html
amy/trainings/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
amy/workshops/: __init__.py  action_required.py  admin.py  apps.py  base_views.py  consts.py  context_processors.py  exceptions.py  fields.py  filters.py  forms.py  git_version.py  github_auth.py  lookups.py  mixins.py  models.py  receivers.py  signals.py  urls.py  util.py  views.py
amy_database_structure/: index.html
api/: filters.py  renderers.py  serializers.py  urls.py  views.py
api/test/: test_api_structure.py  test_events.py  test_export.py  test_reports.py  test_serializers.py  test_trainingrequests.py
authors/: index.html
certification/: certificates.py
certification/code/: README.md  certificates.py
config/: __init__.py  settings.py  urls.py  wsgi.py
data/: registry.json
database/: postgresql_scaffolding.sql
database/migration/: index.html
deployment/: README.md  Vagrantfile  amy_supervisor.conf  provision  runserver.sh
design/: index.html
design/application_design/: index.html
design/cicd/: index.html
design/database_backups/: index.html
design/database_models/: index.html
design/design_patterns/: index.html
design/feature_flags/: index.html
design/model_versioning/: index.html
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: PyData_deploy.md  accessibility_testing.md  amy_database_structure.md  authors.md  certificates.md  deployment.md  extra.css  generate_changelog.py  group-applications-workflow.md  index.md  instructor-training-workflow.txt  manual_deployment_steps.md  models in applications.md  models_in_applications.md  procedures.md  sending_mails.md  template_hierarchy.md  user_guide.md
extforms/: urls.py  views.py
manual_deployment_steps/: index.html
procedures/: index.html
pydata/: api.py  apps.py  checks.py  forms.py  urls.py  views.py
releases/: index.html
scripts/: anonymizer.py  mail-all-activity.py  parse-instructor-info.py  seed_account_benefit_discounts.py  seed_badges.py  seed_benefits.py  seed_communityroles.py  seed_emails.py  seed_event_categories.py  seed_involvements.py  seed_training_requirements.py  show-airports.py  test-command-line-upload.sh
search/: search_index.json
workshops/: __init__.py  action_required.py  admin.py  app_settings.py  base_views.py  check.py  context_processors.py  fields.py  filters.py  forms.py  github_auth.py  lookups.py  models.py  search_indexes.py  signals.py  urls.py  util.py  views.py
(+2645 files in other folders)
