[project]
name = "amy"
version = "4.8.0-dev"
description = "A web-based workshop administration application built using Django."
authors = [{ name = "Carpentries Team", email = "team@carpentries.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
  "argon2-cffi (>=23.1.0,<24.0.0)",
  "crispy-bootstrap4 (>=2024.10,<2025.0)",
  "django (>=5.2,<6.0)",
  "django-anymail (>=12.0,<13.0)",
  "django-better-admin-arrayfield (>=1.4.2,<2.0.0)",
  "django-contrib-comments (>=2.2.0,<3.0.0)",
  "django-countries (>=7.6.1,<8.0.0)",
  "django-crispy-forms (>=2.3,<3.0)",
  "django-debug-toolbar (>=4.4.6,<5.0.0)",
  "django-environ (>=0.11.2,<0.12.0)",
  "django-extensions (>=3.2.3,<4.0.0)",
  "django-filter (>=24.3,<25.0)",
  "django-flags (>=5.0.13,<6.0.0)",
  "django-formset-js-improved (>=0.5.0.3,<0.6.0.0)",
  "django-markdownx (>=4.0.7,<5.0.0)",
  "django-recaptcha (>=4.0.0,<5.0.0)",
  "django-rest-knox (>=5.0.2,<6.0.0)",
  "django-reversion (>=5.1.0,<6.0.0)",
  "django-reversion-compare (>=0.18.1,<0.19.0)",
  "django-select2 (>=8.2.3,<9.0.0)",
  "django-stubs",
  "django-test-migrations (>=1.4.0,<2.0.0)",
  "djangorestframework (>=3.15.2,<4.0.0)",
  "djangorestframework-csv (>=3.0.2,<4.0.0)",
  "djangorestframework-stubs",
  "drf-nested-routers (>=0.94.1,<0.95.0)",
  "faker (>=33.3.1,<34.0.0)",
  "gunicorn (>=23.0.0,<24.0.0)",
  "jinja2 (>=3.1.5,<4.0.0)",
  "mkdocs (>=1.6.1,<2.0.0)",
  "mkdocs-material (>=9.5.49,<10.0.0)",
  "mypy",
  "pre-commit",
  "psycopg (>=3.2.3,<4.0.0)",
  "pydantic (>=2.10.5,<3.0.0)",
  "pygithub (>=2.5.0,<3.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "requests-mock (>=1.12.1,<2.0.0)",
  "social-auth-app-django (>=5.4.2,<6.0.0)",
  "social-auth-core (>=4.5.4,<5.0.0)",
  "typing-extensions",
  "whitenoise (>=6.8.2,<7.0.0)",
  "toml (>=0.10.2,<0.11.0)",
  "boto3 (>=1.36.25,<2.0.0)",
  "boto3-stubs (>=1.36.26,<2.0.0)",
  "cairosvg (>=2.7.1,<3.0.0)",
  "airportsdata (==20250909)",
  "pytz (>=2025.2,<2026.0)",
  "types-pytz (>=2025.2.0.20250809,<2026.0.0.0)",
  "ruff (>=0.14.10,<0.15.0)",
  "types-django-filter>=25.2.0.20251010",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.14"
show_error_codes = true
strict = true
mypy_path = "amy"

[[tool.mypy.overrides]]
module = [
  "anymail.*",
  "cairosvg.*",
  "crispy_forms.*",
  "debug_toolbar.*",
  "django_better_admin_arrayfield.*",
  "django_recaptcha.*",
  "django_comments.*",
  "django_filters.*",
  "django_select2.*",
  "knox.*",
  "markdownx.*",
  "reversion.*",
  "reversion_compare.*",
  "social_django.*",
  "social_core.exceptions.*",
]
follow_untyped_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
